# Proyectos_SO1

./: .gitignore  README.md
Modulo_Kernel/: sysinfo_202113580.c
Proyecto 1/: README.md
Proyecto 1/Scripts/: Contenedores.sh
Proyecto 1/module/: Makefile  sysinfo_202113580.c
Proyecto2/: Comandos.md  Documentacion.md  config_clúster.sh  config_harbor.sh  deployment.yml  docker-compose.yml  subir_harbor.sh
Proyecto2/Consumer/: consumer.go  dockerfile  go.mod  go.sum  suscriber.go
Proyecto2/Consumer/kafka/: deployment.yml  dockerfile  main.go
Proyecto2/Consumer/rabbit/: deployment.yml  dockerfile  main.go
Proyecto2/Deployments/: Exe_proto.sh  HPA.rs  client.go  deployment.yml  dockerfile  go.mod  go.sum  service.yml  tweet.proto
Proyecto2/Deployments/grpc-server/: dockerfile  server.go
Proyecto2/Deployments/grpc-server/kafka/: main.go  (+2 more)
Proyecto2/Deployments/proto/: tweet.pb.go  tweet_grpc.pb.go
Proyecto2/Rust-Api/: Cargo.toml  deployment.yml  dockerfile  ingress.yml  service.yml
Proyecto2/Rust-Api/src/: main.rs
Proyecto2/Trafico/: Ejecutar.sh  app.py  locustfile.py
Proyecto2/grafana/: configuracion.json  ingress.yml
Proyecto_1/: README.md
Proyecto_1/Grafana/: config.json
Proyecto_1/Logs/: DockerFile  app.py  deploy.sh  dockerfile  requirements.txt
Proyecto_1/Scripts/: ComandosCrontab.txt  Contenedores.sh
Proyecto_1/module/: Eliminar_Modulo.sh  Exe.sh  sysinfo_202113580.c
Proyecto_1/module/proc/: a.json  data.json
Proyecto_1/server/: Cargo.toml  main.rs
Proyecto_1/server/src/: main.rs
Scripts/: ComandosCrontab.txt  Contenedores.sh
(+3 files in other folders)
