[package]
name = "container_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.2"
shiplift = "0.7"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
